kqed_dev4/src/objects/Campaign_Member_Criteria__c.object
<CustomObject>
    <description>This object will have all the list of fields which will used to search campaign members.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <inlineHelpText>Field API Name</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Object_API_Name__c</fullName>
        <label>Parent Object API Name</label>
        <picklist>
            <picklistValues>
                <fullName>ACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADDRESS__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bios__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classification__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccountActivity__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPORTUNITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpportunityLineItem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salutation__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving_Summary__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CampaignMember</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <inlineHelpText>Object Label</inlineHelpText>
        <label>Parent Object Name</label>
        <picklist>
            <picklistValues>
                <fullName>ACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADDRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLASSIFICATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTACTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIVING SUMMARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPORTUNITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPORTUNITY PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RELATIONSHIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALUTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMPAIGN/PROGRAM MEMBER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Campaign Member Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Parent_Object_API_Name__c</columns>
        <columns>Parent_Object__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Criterias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>